agregar imagenes, agregar html y css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Manrope:wght@400;700&display=swap" rel="stylesheet">
     <title>Aire Ambiental</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">
+            <img src="/img/logo-mobile-x3.png" alt="aire ambiental" width="30" height="24">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -44,9 +50,14 @@
           </div>
         </div>
       </nav>
-      <section>
-        <h1>Aire Ambiental</h1>
-      </section>
+    <section class="container-fuild main-banner">
+      <h1>Ambientes controlados para la industria moderna</h1>
+      <p>Maximiza la comodidad de tus instalaciones con nuestras soluciones de aire acondicionado eficientes en energía.</p>
+    </section>
+    <section class="container title-paragraph my-5 text-center">
+      <h2>Mantén tus instalaciones operando siempre  con la mejor calidad</h2>
+      <p>Realizamos proyectos, instalaciones y servicios en sistemas de aire acondicionado, ofreciendo siempre lo mejor en tecnología, diseño y eficiencia para el óptimo desarrollo de tu proyecto.</p>
+    </section>
       
 </body>
 </html>
