--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
+    
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +50,7 @@
             </form>
           </div>
         </div>
-      </nav>
+    </nav>
     <section class="container-fuild main-banner">
       <h1>Ambientes controlados para la industria moderna</h1>
       <p>Maximiza la comodidad de tus instalaciones con nuestras soluciones de aire acondicionado eficientes en energía.</p>
@@ -58,6 +59,15 @@
       <h2>Mantén tus instalaciones operando siempre  con la mejor calidad</h2>
       <p>Realizamos proyectos, instalaciones y servicios en sistemas de aire acondicionado, ofreciendo siempre lo mejor en tecnología, diseño y eficiencia para el óptimo desarrollo de tu proyecto.</p>
     </section>
-      
+    <section id="icon_squares" class="icon-squares">
+      <!-- <div>
+        <div>
+          <img src="" alt=""> 
+          <h2></h2>
+          <p></p>
+        </div>
+      </div> -->
+    </section>
+    <script src="js/squares.js"></script>
 </body>
 </html>
