--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
-    
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,14 +59,13 @@
       <p>Realizamos proyectos, instalaciones y servicios en sistemas de aire acondicionado, ofreciendo siempre lo mejor en tecnología, diseño y eficiencia para el óptimo desarrollo de tu proyecto.</p>
     </section>
     <section id="icon_squares" class="icon-squares">
-      <!-- <div>
+      <div>
         <div>
           <img src="" alt=""> 
-          <h2></h2>
-          <p></p>
+          <h2>Hola</h2>
+          <p>descrpt</p>
         </div>
-      </div> -->
+      </div>
     </section>
-    <script src="js/squares.js"></script>
 </body>
 </html>
