--- a/index.html
+++ b/index.html
@@ -58,14 +58,31 @@
       <h2>Mantén tus instalaciones operando siempre  con la mejor calidad</h2>
       <p>Realizamos proyectos, instalaciones y servicios en sistemas de aire acondicionado, ofreciendo siempre lo mejor en tecnología, diseño y eficiencia para el óptimo desarrollo de tu proyecto.</p>
     </section>
-    <section id="icon_squares" class="icon-squares">
+    <section id="icon_squares" class="container icon-squares text-center">
       <div>
-        <div>
-          <img src="" alt=""> 
-          <h2>Hola</h2>
-          <p>descrpt</p>
+        <div class="square-bg">
+          <img src="img/icon-experiencia.png" alt=""> 
+          <h2>Experiencia amplia</h2>
+          <p>Más de 30 años innovando en operaciones y mantenimiento de sistemas de climatización.</p>
+          <span class="linea"></span>
+        </div>
+        <div class="square-2">
+          <img src="img/icon-mantenimiento.png" alt=""> 
+          <h2>Mantenimiento preciso</h2>
+          <p>Evaluaciones y servicios preventivos que ayudan a reducir riesgos, costos y futuras fallas.</p>
+          <span class="linea"></span>
+        </div>
+        <div class="square-3">
+          <img src="img/icon-respuesta.png" alt=""> 
+          <h2>Respuesta rápida</h2>
+          <p>Trabajo eficiente para restablecer el funcionamiento de tus instalaciones de manera rápida.</p>
+          <span class="linea"></span>
         </div>
       </div>
+    </section>
+    <section>
+      <h2></h2>
+      <p></p>
     </section>
 </body>
 </html>
