--- a/index.html
+++ b/index.html
@@ -81,6 +81,73 @@
       </div>
     </section>
     <section id="cubrir">
+      <div class="inner-cubrir">
+        <h3>Proyectos especializados en sistemas de climatización</h3>
+        <p>Diseñamos sistemas de aire acondicionado, calefacción y ventilación basados en las necesidades de tu proyecto.</br></br>Realizamos un análisis extenso de las instalaciones, tomando en cuenta factores como el tamaño, orientación, ocupación y patrones de uso. Utilizando esta información, diseñamos un sistema de climatización personalizado que se adapte a las necesidades y especificaciones del proyecto. Esto puede incluir la selección del equipo adecuado, así como la identificación de la ubicación y configuración más adecuada.</p>
+        <img src="/img/placeholder.jpg" alt="">
+        <h2>Diseñamos proyectos para distintos mercados</h2>
+        <div class="icon-header">
+          <img src="/img/ic_merc.png" alt="">
+          <h3>Corporativos</h3>
+        </div>
+        <div class="icon-header">
+          <img src="/img/ic-naves.png" alt="">
+          <h3>Naves industriales</h3>
+        </div>
+        <div class="icon-header">
+          <img src="/img/ic-hoteles.png" alt="">
+          <h3>Hoteles</h3>
+        </div>
+        <div class="icon-header">
+          <img src="/img/ic-comercial.png" alt="">
+          <h3>Centros comerciales</h3>
+        </div>
+        <div class="icon-header">
+          <img src="/img/ic-departamentos.png" alt="">
+          <h3>Torres de departamentos</h3>
+        </div>
+        <div class="icon-header">
+          <img src="/img/ic-restaurantes.png" alt="">
+          <h3>Restaurantes</h3>
+        </div>
+      </div>
+    </section>
+    <section class="aire-card">
+      <div class="aire-card-cont">
+        <img src="/img/ic_instalacion.png" alt="">
+        <h3>Venta e instalación</h3>
+        <p>Manejamos todos los aspectos de la instalación, desde la preparación del sitio, hasta pruebas y puesta en marcha finales. Contamos con una gran variedad de equipos de alta calidad que se adaptan a las especificaciones de tu proyecto.</p>
+        <ul>
+          <li>Chillers</li>
+          <li>DX</li>
+          <li>Extractores</li>
+          <li>Paquete</li>
+          <li>Mini Split</li>
+          <li>VRF</li>
+          <li>UMA'S</li>
+        </ul>
+      </div>
+      <div class="aire-card-cont">
+        <img src="/img/ic_mantenimiento.png" alt="">
+        <h3>Mantenimiento</h3>
+        <p>Realizamos mantenimientos integrales para asegurarnos que las instalaciones estén operando siempre de manera óptima y eficiente para mantener el mejor desempeño y longevidad de los sistemas de climatización.</p>
+        <ul>
+          <li>Reparación y limpieza</li>
+          <li>Mantenimiento preventivo/correctivo</li>
+          <li>Reemplazo de equipos</li>
+          <li>Purificación de aire</li>
+        </ul>
+      </div>
+    </section>
+    <section class="clientes">
+      <h3>Orgullosos de trabajar con una gran diversidad de compañías</h3>
+      <div class="clientes-cont">
+        <img src="/img/img_amazon.png" alt="">
+        <img src="/img/img_walmart.png" alt="">
+        <img src="/img/img_flex.png" alt="">
+        <img src="/img/holidayinn.png" alt="">
+        <img src="/img/continental.png" alt="">
+    </div>
     </section>
     <script src="js/squares.js"></script>
 </body>
