--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -148,6 +149,112 @@
         <img src="/img/holidayinn.png" alt="">
         <img src="/img/continental.png" alt="">
     </div>
+    </section>
+    <section class="gran-tamano">
+      <div class="gran-cont container">
+        <img src="/img/placeholder.jpg" alt="">
+        <h3>Instalaciones de gran tamaño</h3>
+        <p>Nuestros técnicos están capacitados con las últimas herramientas y equipos para completar grandes instalaciones manera efectiva tanto para propiedades residenciales como comerciales.</p>
+      </div>
+    </section>
+    <section class=" container destacados">
+      <div class="destacados-cont">
+        <h2>Proyectos destacados</h2>
+        <p>Conoce algunos de nuestros proyectos realizados en empresas reconocidas en México.</p>
+      </div>
+      <div class="proyecto">
+        <img src="/img/placeholder-2.png" alt="">
+        <div class="tag">
+          <img src="/img/ic-comerciales-chico.png" alt="">
+          <span>Centros Comercilaes</span>
+        </div>
+        <div class="nombre-lugar">
+          <h3>Nombre Proyecto</h3>
+          <span>Guadalajara, Jalisco</span>
+        </div>
+      </div>
+      <div class="proyecto">
+        <img src="/img/placeholder-2.png" alt="">
+        <div class="tag">
+          <img src="/img/ic-comerciales-chico.png" alt="">
+          <span>Centros Comercilaes</span>
+        </div>
+        <div class="nombre-lugar">
+          <h3>Nombre Proyecto</h3>
+          <span>Guadalajara, Jalisco</span>
+        </div>
+      </div>
+      <div class="proyecto">
+        <img src="/img/placeholder-2.png" alt="">
+        <div class="tag">
+          <img src="/img/ic-comerciales-chico.png" alt="">
+          <span>Centros Comercilaes</span>
+        </div>
+        <div class="nombre-lugar">
+          <h3>Nombre Proyecto</h3>
+          <span>Guadalajara, Jalisco</span>
+        </div>
+      </div>
+      <div class="proyecto">
+        <img src="/img/placeholder-2.png" alt="">
+        <div class="tag">
+          <img src="/img/ic-comerciales-chico.png" alt="">
+          <span>Centros Comercilaes</span>
+        </div>
+        <div class="nombre-lugar">
+          <h3>Nombre Proyecto</h3>
+          <span>Guadalajara, Jalisco</span>
+        </div>
+      </div>
+      <div class="proyecto">
+        <img src="/img/placeholder-2.png" alt="">
+        <div class="tag">
+          <img src="/img/ic-comerciales-chico.png" alt="">
+          <span>Centros Comercilaes</span>
+        </div>
+        <div class="nombre-lugar">
+          <h3>Nombre Proyecto</h3>
+          <span>Guadalajara, Jalisco</span>
+        </div>
+      </div>
+      <div class="proyecto">
+        <img src="/img/placeholder-2.png" alt="">
+        <div class="tag">
+          <img src="/img/ic-comerciales-chico.png" alt="">
+          <span>Centros Comercilaes</span>
+        </div>
+        <div class="nombre-lugar">
+          <h3>Nombre Proyecto</h3>
+          <span>Guadalajara, Jalisco</span>
+        </div>
+      </div>
+    </section>
+    <section class="contacto">
+      <div class="contacto-title">
+        <h2>Contacto</h2>
+        <p>Estamos aquí para ayudarte, envíanos un mensaje y te responderemos lo antes posible.</p>
+      </div>
+      <div class="form">
+        <form action="">
+          <div class="f-name">
+            <label for="">Nombre:</label>
+            <input id="" type="text" name="name" />
+          </div>
+          <div class="f-email">
+            <label for="">E-mail:</label>
+            <input id="" type="text" name="email" />
+          </div>
+          <div class="f-asunto">
+            <label for="">Asunto:</label>
+            <input id="" type="text" name="asunto" />
+          </div>
+          <div class="f-mensaje">
+            <label for="">Mensaje:</label>
+            <textarea id="" rows="5" type="text" name="mensaje" ></textarea>
+          </div>
+          <input type="submit" value="Enviar"  class="f-enviar" />
+        </form>
+      </div>
     </section>
     <script src="js/squares.js"></script>
 </body>
