--- a/index.html
+++ b/index.html
@@ -84,9 +84,13 @@
     <section id="cubrir">
 		<!-- JAVASCRIPT INJECT SQURES.JS-->
       <div class="inner-cubrir">
-				<h3>Proyectos especializados en sistemas de climatización</h3>
-				<p>Diseñamos sistemas de aire acondicionado, calefacción y ventilación basados en las necesidades de tu proyecto.</br></br>Realizamos un análisis extenso de las instalaciones, tomando en cuenta factores como el tamaño, orientación, ocupación y patrones de uso. Utilizando esta información, diseñamos un sistema de climatización personalizado que se adapte a las necesidades y especificaciones del proyecto. Esto puede incluir la selección del equipo adecuado, así como la identificación de la ubicación y configuración más adecuada.</p>
-        <img src="/img/placeholder.jpg" alt="">
+        <div class="title-text-img">
+          <div>
+            <h3>Proyectos especializados en sistemas de climatización</h3>
+            <p>Diseñamos sistemas de aire acondicionado, calefacción y ventilación basados en las necesidades de tu proyecto.</br></br>Realizamos un análisis extenso de las instalaciones, tomando en cuenta factores como el tamaño, orientación, ocupación y patrones de uso. Utilizando esta información, diseñamos un sistema de climatización personalizado que se adapte a las necesidades y especificaciones del proyecto. Esto puede incluir la selección del equipo adecuado, así como la identificación de la ubicación y configuración más adecuada.</p>
+          </div>
+          <img src="/img/placeholder.jpg" alt="">
+        </div>
         <h2>Diseñamos proyectos para distintos mercados</h2>
         <div class="icon-header-cont">
           <div class="icon-header">
