--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg" id="navBar">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="/img/logo-mobile-x3.png" alt="aire ambiental" width="30" height="24">
+            <img src="img/logo-mobile-x3.png" alt="aire ambiental" width="30" height="24">
             aire ambiental
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,32 +78,32 @@
             <h3>Proyectos especializados en sistemas de climatización</h3>
             <p>Diseñamos sistemas de aire acondicionado, calefacción y ventilación basados en las necesidades de tu proyecto.</br></br>Realizamos un análisis extenso de las instalaciones, tomando en cuenta factores como el tamaño, orientación, ocupación y patrones de uso. Utilizando esta información, diseñamos un sistema de climatización personalizado que se adapte a las necesidades y especificaciones del proyecto. Esto puede incluir la selección del equipo adecuado, así como la identificación de la ubicación y configuración más adecuada.</p>
           </div>
-          <img src="/img/placeholder.jpg" alt="">
+          <img src="img/placeholder.jpg" alt="">
         </div>
         <h2>Diseñamos proyectos para distintos mercados</h2>
         <div class="icon-header-cont">
           <div class="icon-header">
-            <img src="/img/ic_merc.png" alt="">
+            <img src="img/ic_merc.png" alt="">
             <h3>Corporativos</h3>
           </div>
           <div class="icon-header">
-            <img src="/img/ic-naves.png" alt="">
+            <img src="img/ic-naves.png" alt="">
             <h3>Naves industriales</h3>
           </div>
           <div class="icon-header">
-            <img src="/img/ic-hoteles.png" alt="">
+            <img src="img/ic-hoteles.png" alt="">
             <h3>Hoteles</h3>
           </div>
           <div class="icon-header">
-            <img src="/img/ic-comercial.png" alt="">
+            <img src="img/ic-comercial.png" alt="">
             <h3>Centros comerciales</h3>
           </div>
           <div class="icon-header">
-            <img src="/img/ic-departamentos.png" alt="">
+            <img src="img/ic-departamentos.png" alt="">
             <h3>Torres de departamentos</h3>
           </div>
           <div class="icon-header">
-            <img src="/img/ic-restaurantes.png" alt="">
+            <img src="img/ic-restaurantes.png" alt="">
             <h3>Restaurantes</h3>
           </div>
         </div>
@@ -112,7 +112,7 @@
     </section>
     <section class="aire-card">
       <div class="aire-card-cont">
-        <img src="/img/ic_instalacion.png" alt="">
+        <img src="img/ic_instalacion.png" alt="">
         <h3>Venta e instalación</h3>
         <p>Manejamos todos los aspectos de la instalación, desde la preparación del sitio, hasta pruebas y puesta en marcha finales. Contamos con una gran variedad de equipos de alta calidad que se adaptan a las especificaciones de tu proyecto.</p>
         <ul>
@@ -126,7 +126,7 @@
         </ul>
       </div>
       <div class="aire-card-cont">
-        <img src="/img/ic_mantenimiento.png" alt="">
+        <img src="img/ic_mantenimiento.png" alt="">
         <h3>Mantenimiento</h3>
         <p>Realizamos mantenimientos integrales para asegurarnos que las instalaciones estén operando siempre de manera óptima y eficiente para mantener el mejor desempeño y longevidad de los sistemas de climatización.</p>
         <ul>
@@ -140,16 +140,16 @@
     <section class="container clientes">
       <h3>Orgullosos de trabajar con una gran diversidad de compañías</h3>
       <div class="clientes-cont">
-        <img src="/img/img_amazon.png" alt="">
-        <img src="/img/img_walmart.png" alt="">
-        <img src="/img/img_flex.png" alt="">
-        <img src="/img/holidayinn.png" alt="">
-        <img src="/img/continental.png" alt="">
+        <img src="img/img_amazon.png" alt="">
+        <img src="img/img_walmart.png" alt="">
+        <img src="img/img_flex.png" alt="">
+        <img src="img/holidayinn.png" alt="">
+        <img src="img/continental.png" alt="">
     </div>
     </section>
     <section class="gran-tamano">
       <div class="gran-cont container">
-        <img src="/img/placeholder.jpg" alt="">
+        <img src="img/placeholder.jpg" alt="">
         <div>
           <h3>Instalaciones de gran tamaño</h3>
           <p>Nuestros técnicos están capacitados con las últimas herramientas y equipos para completar grandes instalaciones manera efectiva tanto para propiedades residenciales como comerciales.</p>
@@ -163,9 +163,9 @@
       </div>
       <div class="main-proyecto-cont">
       <div class="proyecto">
-        <img src="/img/placeholder-2.png" alt="">
+        <img src="img/placeholder-2.png" alt="">
         <div class="tag">
-          <img src="/img/ic-comerciales-chico.png" alt="">
+          <img src="img/ic-comerciales-chico.png" alt="">
           <span>Centros Comercilaes</span>
         </div>
         <div class="nombre-lugar">
@@ -174,9 +174,9 @@
         </div>
       </div>
       <div class="proyecto">
-        <img src="/img/placeholder-2.png" alt="">
+        <img src="img/placeholder-2.png" alt="">
         <div class="tag">
-          <img src="/img/ic-comerciales-chico.png" alt="">
+          <img src="img/ic-comerciales-chico.png" alt="">
           <span>Centros Comercilaes</span>
         </div>
         <div class="nombre-lugar">
@@ -185,9 +185,9 @@
         </div>
       </div>
       <div class="proyecto">
-        <img src="/img/placeholder-2.png" alt="">
+        <img src="img/placeholder-2.png" alt="">
         <div class="tag">
-          <img src="/img/ic-comerciales-chico.png" alt="">
+          <img src="img/ic-comerciales-chico.png" alt="">
           <span>Centros Comercilaes</span>
         </div>
         <div class="nombre-lugar">
@@ -196,9 +196,9 @@
         </div>
       </div>
       <div class="proyecto">
-        <img src="/img/placeholder-2.png" alt="">
+        <img src="img/placeholder-2.png" alt="">
         <div class="tag">
-          <img src="/img/ic-comerciales-chico.png" alt="">
+          <img src="img/ic-comerciales-chico.png" alt="">
           <span>Centros Comercilaes</span>
         </div>
         <div class="nombre-lugar">
@@ -207,9 +207,9 @@
         </div>
       </div>
       <div class="proyecto">
-        <img src="/img/placeholder-2.png" alt="">
+        <img src="img/placeholder-2.png" alt="">
         <div class="tag">
-          <img src="/img/ic-comerciales-chico.png" alt="">
+          <img src="img/ic-comerciales-chico.png" alt="">
           <span>Centros Comercilaes</span>
         </div>
         <div class="nombre-lugar">
@@ -218,9 +218,9 @@
         </div>
       </div>
       <div class="proyecto">
-        <img src="/img/placeholder-2.png" alt="">
+        <img src="img/placeholder-2.png" alt="">
         <div class="tag">
-          <img src="/img/ic-comerciales-chico.png" alt="">
+          <img src="img/ic-comerciales-chico.png" alt="">
           <span>Centros Comercilaes</span>
         </div>
         <div class="nombre-lugar">
@@ -259,14 +259,14 @@
       <div class="iconos-finales-section">
         <div class="iconos-final">
           <div class="iconos-container">
-            <img src="/img/ic_telefono.png" alt="">
+            <img src="img/ic_telefono.png" alt="">
             <h5>Llámanos</h5>
             <span>Lunes-Viernes de 9:00am a 6:00pm</br><b>(33)38 26 22 15</b></span>
           </div>
         </div>
         <div class="iconos-final">
           <div class="iconos-container">
-            <img src="/img/ic_correo.png" alt="">
+            <img src="img/ic_correo.png" alt="">
             <h5>Escríbenos</h5>
             <span>Envíanos un correo</br><b>proyectos@aacsa.mx</b></span>
           </div>
@@ -282,7 +282,7 @@
     </section>
 	 <footer class="container">
 		<div class="logo-company">
-			<img src="/img/logo.png" alt="">
+			<img src="img/logo.png" alt="">
 			<h3>Transformando la calidad de los ambientes a tu alrededor.</h3>
 			<span>© Aire Ambiental Controlado 2023 | Aviso de Privacidad</span>
 		</div>
