--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Manrope:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Aire Ambiental</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg" id="navBar">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="img/logo-mobile-x3.png" alt="aire ambiental" width="30" height="24">
+            <img src="img/img_logo_aacsa.svg" alt="aire ambiental" width="30" height="24">
             aire ambiental
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
       <h1>Ambientes controlados para la industria moderna</h1>
       <p>Maximiza la comodidad de tus instalaciones con nuestras soluciones de aire acondicionado eficientes en energía.</p>
     </section>
-    <section class="container title-paragraph my-5 text-center">
+    <section class="container title-paragraph text-center">
       <h2>Mantén tus instalaciones operando siempre  con la mejor calidad</h2>
       <p>Realizamos proyectos, instalaciones y servicios en sistemas de aire acondicionado, ofreciendo siempre lo mejor en tecnología, diseño y eficiencia para el óptimo desarrollo de tu proyecto.</p>
     </section>
@@ -115,15 +115,19 @@
         <img src="img/ic_instalacion.png" alt="">
         <h3>Venta e instalación</h3>
         <p>Manejamos todos los aspectos de la instalación, desde la preparación del sitio, hasta pruebas y puesta en marcha finales. Contamos con una gran variedad de equipos de alta calidad que se adaptan a las especificaciones de tu proyecto.</p>
-        <ul>
-          <li>Chillers</li>
-          <li>DX</li>
-          <li>Extractores</li>
-          <li>Paquete</li>
-          <li>Mini Split</li>
-          <li>VRF</li>
-          <li>UMA'S</li>
-        </ul>
+        <div class="ul-cont">
+          <ul>
+            <li>Chillers</li>
+            <li>DX</li>
+            <li>Extractores</li>
+            <li>Paquete</li>
+          </ul>
+          <ul>
+            <li>Mini Split</li>
+            <li>VRF</li>
+            <li>UMA'S</li>
+          </ul>
+        </div>
       </div>
       <div class="aire-card-cont">
         <img src="img/ic_mantenimiento.png" alt="">
@@ -140,17 +144,17 @@
     <section class="container clientes">
       <h3>Orgullosos de trabajar con una gran diversidad de compañías</h3>
       <div class="clientes-cont">
-        <img src="img/img_amazon.png" alt="">
-        <img src="img/img_walmart.png" alt="">
-        <img src="img/img_flex.png" alt="">
-        <img src="img/holidayinn.png" alt="">
-        <img src="img/continental.png" alt="">
+        <img src="img/amazon.svg" alt="">
+        <img src="img/walmart.svg" alt="">
+        <img src="img/flex.svg" alt="">
+        <img src="img/holiday.svg" alt="">
+        <img src="img/continental.svg" alt="">
     </div>
     </section>
     <section class="gran-tamano">
       <div class="gran-cont container">
         <img src="img/placeholder.jpg" alt="">
-        <div>
+        <div class="gran-tamano-bg">
           <h3>Instalaciones de gran tamaño</h3>
           <p>Nuestros técnicos están capacitados con las últimas herramientas y equipos para completar grandes instalaciones manera efectiva tanto para propiedades residenciales como comerciales.</p>
         </div>
