--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Aire Ambiental</title>
 </head>
 <body>
@@ -48,19 +48,19 @@
     <section id="icon_squares" class="container icon-squares text-center">
       <div class="main-squares-cont">
         <div class="square-bg">
-          <img src="img/icon-experiencia.png" alt=""> 
+          <img src="img/ic_ben_experiencia.svg" alt=""> 
           <h2>Experiencia amplia</h2>
           <p>Más de 30 años innovando en operaciones y mantenimiento de sistemas de climatización.</p>
           <span class="linea"></span>
         </div>
         <div class="square-2">
-          <img src="img/icon-mantenimiento.png" alt=""> 
+          <img src="img/ic_ben_mantenimiento.svg" alt=""> 
           <h2>Mantenimiento preciso</h2>
           <p>Evaluaciones y servicios preventivos que ayudan a reducir riesgos, costos y futuras fallas.</p>
           <span class="linea"></span>
         </div>
         <div class="square-3">
-          <img src="img/icon-respuesta.png" alt=""> 
+          <img src="img/ic_ben_respuesta.svg" alt=""> 
           <h2>Respuesta rápida</h2>
           <p>Trabajo eficiente para restablecer el funcionamiento de tus instalaciones de manera rápida.</p>
           <span class="linea"></span>
@@ -83,27 +83,27 @@
         <h2>Diseñamos proyectos para distintos mercados</h2>
         <div class="icon-header-cont">
           <div class="icon-header">
-            <img src="img/ic_merc.png" alt="">
+            <img src="img/ic_merc_corporativos.svg" alt="">
             <h3>Corporativos</h3>
           </div>
           <div class="icon-header">
-            <img src="img/ic-naves.png" alt="">
+            <img src="img/ic_merc_naves.svg" alt="">
             <h3>Naves industriales</h3>
           </div>
           <div class="icon-header">
-            <img src="img/ic-hoteles.png" alt="">
+            <img src="img/ic_merc_hoteles.svg" alt="">
             <h3>Hoteles</h3>
           </div>
           <div class="icon-header">
-            <img src="img/ic-comercial.png" alt="">
+            <img src="img/ic_merc_comerciales.svg" alt="">
             <h3>Centros comerciales</h3>
           </div>
           <div class="icon-header">
-            <img src="img/ic-departamentos.png" alt="">
+            <img src="img/ic_merc_departamentos.svg" alt="">
             <h3>Torres de departamentos</h3>
           </div>
           <div class="icon-header">
-            <img src="img/ic-restaurantes.png" alt="">
+            <img src="img/ic_merc_restaurantes.svg" alt="">
             <h3>Restaurantes</h3>
           </div>
         </div>
@@ -112,7 +112,7 @@
     </section>
     <section class="aire-card">
       <div class="aire-card-cont">
-        <img src="img/ic_instalacion.png" alt="">
+        <img src="img/ic_serv_instalacion.svg" alt="">
         <h3>Venta e instalación</h3>
         <p>Manejamos todos los aspectos de la instalación, desde la preparación del sitio, hasta pruebas y puesta en marcha finales. Contamos con una gran variedad de equipos de alta calidad que se adaptan a las especificaciones de tu proyecto.</p>
         <div class="ul-cont">
@@ -130,7 +130,7 @@
         </div>
       </div>
       <div class="aire-card-cont">
-        <img src="img/ic_mantenimiento.png" alt="">
+        <img src="img/ic_serv_mantenimiento.svg" alt="">
         <h3>Mantenimiento</h3>
         <p>Realizamos mantenimientos integrales para asegurarnos que las instalaciones estén operando siempre de manera óptima y eficiente para mantener el mejor desempeño y longevidad de los sistemas de climatización.</p>
         <ul>
@@ -153,7 +153,7 @@
     </section>
     <section class="gran-tamano">
       <div class="gran-cont container">
-        <img src="img/placeholder.jpg" alt="">
+        <img src="img/new-one.png" alt="">
         <div class="gran-tamano-bg">
           <h3>Instalaciones de gran tamaño</h3>
           <p>Nuestros técnicos están capacitados con las últimas herramientas y equipos para completar grandes instalaciones manera efectiva tanto para propiedades residenciales como comerciales.</p>
@@ -169,7 +169,7 @@
       <div class="proyecto">
         <img src="img/placeholder-2.png" alt="">
         <div class="tag">
-          <img src="img/ic-comerciales-chico.png" alt="">
+          <img src="img/ic_merc_comerciales.svg" alt="">
           <span>Centros Comercilaes</span>
         </div>
         <div class="nombre-lugar">
@@ -180,8 +180,8 @@
       <div class="proyecto">
         <img src="img/placeholder-2.png" alt="">
         <div class="tag">
-          <img src="img/ic-comerciales-chico.png" alt="">
-          <span>Centros Comercilaes</span>
+          <img src="img/ic_merc_naves.svg" alt="">
+          <span>Naves Industriales</span>
         </div>
         <div class="nombre-lugar">
           <h3>Nombre Proyecto</h3>
@@ -191,8 +191,8 @@
       <div class="proyecto">
         <img src="img/placeholder-2.png" alt="">
         <div class="tag">
-          <img src="img/ic-comerciales-chico.png" alt="">
-          <span>Centros Comercilaes</span>
+          <img src="img/ic_merc_hoteles.svg" alt="">
+          <span>Hoteles</span>
         </div>
         <div class="nombre-lugar">
           <h3>Nombre Proyecto</h3>
@@ -202,8 +202,8 @@
       <div class="proyecto">
         <img src="img/placeholder-2.png" alt="">
         <div class="tag">
-          <img src="img/ic-comerciales-chico.png" alt="">
-          <span>Centros Comercilaes</span>
+          <img src="img/ic_merc_corporativos.svg" alt="">
+          <span>Corporativos</span>
         </div>
         <div class="nombre-lugar">
           <h3>Nombre Proyecto</h3>
@@ -213,8 +213,8 @@
       <div class="proyecto">
         <img src="img/placeholder-2.png" alt="">
         <div class="tag">
-          <img src="img/ic-comerciales-chico.png" alt="">
-          <span>Centros Comercilaes</span>
+          <img src="img/ic_merc_restaurantes.svg" alt="">
+          <span>Restaurantes</span>
         </div>
         <div class="nombre-lugar">
           <h3>Nombre Proyecto</h3>
@@ -224,8 +224,8 @@
       <div class="proyecto">
         <img src="img/placeholder-2.png" alt="">
         <div class="tag">
-          <img src="img/ic-comerciales-chico.png" alt="">
-          <span>Centros Comercilaes</span>
+          <img src="img/ic_merc_departamentos.svg" alt="">
+          <span>torres de Departamentos</span>
         </div>
         <div class="nombre-lugar">
           <h3>Nombre Proyecto</h3>
