--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <img src="img/ic_ben_respuesta.svg" alt=""> 
           <h2>Respuesta rápida</h2>
           <p>Trabajo eficiente para restablecer el funcionamiento de tus instalaciones de manera rápida.</p>
-          <span class="linea"></span>
+          <div class="linea"></div>
         </div>
       </div>
     </section>
