--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-    <script src="/js/bootstrap.min.js"></script>
+    
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -292,5 +292,7 @@
 		</div>
 	 </footer>
     <script src="js/squares.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
