--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
           <p>Evaluaciones y servicios preventivos que ayudan a reducir riesgos, costos y futuras fallas.</p>
           <span class="linea"></span>
         </div>
-        <div class="square-3">
+        <div class="square-bg new-background-lines">
           <img src="img/ic_ben_respuesta.svg" alt=""> 
           <h2>Respuesta rápida</h2>
           <p>Trabajo eficiente para restablecer el funcionamiento de tus instalaciones de manera rápida.</p>
-          <div class="linea"></div>
+          <span class="linea"></span>
         </div>
       </div>
     </section>
